# ai_strings

./: .gitignore  pyproject.toml
ai_strings/: __init__.py
ai_strings/agent/: agent.py  chat_agent.py
ai_strings/embeddings/: base.py  gemini.py  sentence_transformer.py  tfidf.py
ai_strings/llms/: __init__.py  base.py  gemini.py  openai_llm.py
ai_strings/memory/: base.py  short_term.py
