[project]
name = "ai-strings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShivanshTyagi9", email = "shivelite2003@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.13.0",
    "openai>=1.77.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
